--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,6 +27,11 @@
         viewBox="0 0 1008 651"
       >
         <path
+          id="FM"
+          title="Federated States of Micronesia"
+          d="M450,320L452,322L453,324L452,326L450,328L448,326L447,324L448,322Z"
+        />
+        <path
           id="AE"
           title="United Arab Emirates"
           d="M619.874,393.722L620.373,393.573L620.477,394.411L622.671,393.93L624.99,394.009L626.684,394.1L628.604,392.028L630.695,390.054L632.467,388.146L633.001,389.202L633.382,391.639L631.949,391.651L631.72,393.648L632.216,394.073L630.947,394.674L630.939,395.919L630.122,397.175L630.049,398.394L629.484,399.032L621.056,397.508L619.981,394.428z"
@@ -911,9 +916,12 @@
     <h2 class="total-count">Total Countries: <%=total%></h2>
     <script>
       const country_codes = "<%= countries %>".split(",");
-      console.log(typeof "<%= countries %>");
+
+      console.log("<%= countries %>");
       country_codes.forEach((code) => {
-        document.getElementById(code).style.fill = "teal";
+        console.log(1);
+        let element = document.getElementById(code);
+        element.style.fill = "teal";
       });
     </script>
   </body>
